objects/Part__c.object
<CustomObject>
    <fields>
        <fullName>Base_Alloy__c</fullName>
        <label>Base Alloy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chip_Size_y__c</fullName>
        <label>Chip Size y</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chip_size_x__c</fullName>
        <label>Chip size x</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ERP_Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ERP Device</label>
        <referenceTo>ERP_Device__c</referenceTo>
        <relationshipLabel>MDD Parts</relationshipLabel>
        <relationshipName>MDD_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Family_Weight__c</fullName>
        <label>Family Weight</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Folder_Link__c</fullName>
        <label>Folder Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Last_Update_Time_Stamp__c</fullName>
        <label>Last Update Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Level__c</fullName>
        <label>Lead Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPart_Family__c</fullName>
        <description>Part family coming from the MD Parts sheet</description>
        <label>MDPart Family</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSL_Rating__c</fullName>
        <label>MSL Rating</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Reflow_Time__c</fullName>
        <label>Max Reflow Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_reflow_Cycles__c</fullName>
        <label>Number of reflow Cycles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Type__c</fullName>
        <label>Package Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_x__c</fullName>
        <label>Package x</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_y__c</fullName>
        <label>Package y</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Part_Family__c</fullName>
        <label>Part Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Type__c</fullName>
        <label>Part Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peak_process_Body_Temp__c</fullName>
        <label>Peak process Body Temp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plating_grid_material__c</fullName>
        <label>Plating/grid material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wafer_Size__c</fullName>
        <label>Wafer Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MDD Part</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Part_Number__c</columns>
        <columns>Part_Type__c</columns>
        <columns>MDPart_Family__c</columns>
        <columns>Part_Family__c</columns>
        <columns>Folder_Link__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Peak_process_Body_Temp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Part_Number__c</field>
            <operation>contains</operation>
            <value>00NF928</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDD Parts</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Part_Access__c</fullName>
        <label>Part Access</label>
    </sharingReasons>
</CustomObject>